Alignment Fix

--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@ body {
 
     display: flex;
     flex-flow: column wrap;
-    align-items: center;
     background: #fefbd8;
 
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Rboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -49,7 +48,15 @@ h4 {
 }
 
 .sketch {
+    text-align: center;
+}
+
+#sketch-image{
     border: groove 10px;
+}
+
+.border{
+    border: inset 10px;
 }
 
 .pstructure {
